--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "gulp-angular-templatecache": "^2.0.0",
     "@types/angular-ui-router": "^1.1.36",
     "del": "^2.2.2",
-    "gulp": "github:gulpjs/gulp#4ed9a4a3275559c73a396eff7e1fde3824951ebb",
-    "gulp-hub": "github:frankwallis/gulp-hub#d461b9c700df9010d0a8694e4af1fb96d9f38bf4",
+    "gulp": "gulpjs/gulp#4ed9a4a3275559c73a396eff7e1fde3824951ebb",
+    "gulp-hub": "frankwallis/gulp-hub#d461b9c700df9010d0a8694e4af1fb96d9f38bf4",
     "gulp-filter": "^5.0.0",
     "gulp-util": "^3.0.8",
     "gulp-useref": "^3.1.2",
@@ -70,12 +70,5 @@
     "extends": [
       "xo-space"
     ]
-  },
-  "name": "ang1",
-  "version": "1.0.0",
-  "description": "projeto estudo angular 1.5",
-  "main": "gulpfile.js",
-  "dependencies": {},
-  "author": "",
-  "license": "ISC"
+  }
 }
